[FIX] html_editor: color inheritance and gradient visibility in lists
Steps to Reproduce:

- Create a list in the editor.
- Apply a text color to an item.
- Change the font type of the text inside the list (e.g., to H1–H6).
- Apply a gradient color to text inside a list item.
- Move the cursor outside the list by pressing Enter twice and start typing in
  the new container.

Before this commit:

- When changing the font type (H1–H6) after applying a color, the text color
  turns to default color. also when applying a gradient color and then changing
  the font type, the text becomes transparent.
- This happens because the gradient style was incorrectly applied both on
  the `<li>` and its child `<font>` element. As a result, Checklist items lose
  their line-through when checked. Also new base container outside the list
  ends up with a `<font>` wrapping another `<font>`.

After this commit:

- All child elements inside the list item inherit the color and Gradient
  styles are applied only to the `<font>` element.
- Checklist items correctly show the line-through when checked and No invalid
  nested `<font class="text-gradient">` tags are created when writing outside
  the list after pressing Enter twice.

task-5039499

closes odoo/odoo#231308

X-original-commit: 076c9a82e02a0d2a68069a3227755fb6904c0654

--- a/addons/html_editor/static/src/main/list/list.scss
+++ b/addons/html_editor/static/src/main/list/list.scss
@@ -2,6 +2,10 @@ li p {
     margin-bottom: 0px;
 }
 
+li * {
+    color: inherit;
+}
+
 // Checklist
 ul.o_checklist {
     > li {
